kubernetes/apps/vpn/pod-gateway/app/networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: pod-gateway
  namespace: vpn
  labels:
    app.kubernetes.io/instance: pod-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  selector: app.kubernetes.io/name == 'pod-gateway'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: UDP
      destination:
        nets:
          - 0.0.0.0/0
        ports:
          - 51820
